remove payments column on mobile reviewers (bug 839541)

--- a/media/css/devreg/reviewers.less
+++ b/media/css/devreg/reviewers.less
@@ -1553,6 +1553,13 @@ iframe#manifest-contents {
         border-bottom: 1px solid #A5BFCE;
         h3 {
             float: none;
+    #addon-queue {
+        th {
+            font-size: 13px;
+            padding: 13px 0;
+        }
+        .payments {
+            display: none;
         }
     }
     #log-filter, #log-listing thead {
